tests/paczka1/small_fuzzy/23893315.err
Error in line 2: S892 A546 29,2
Error in line 13: PBj A891 19,0
